--- a/style.css
+++ b/style.css
@@ -26,9 +26,8 @@ header h1 {
 }
 
 header nav a {
-    padding-left: 10px;
-    padding-right: 10px;
-}
+    padding-left: 20px;
+    }
 
 header nav {
     display: flex;
@@ -50,7 +49,7 @@ header nav {
 
 #img-alt {
     width: 900px;
-    height: 200px;
+    height: auto;
     background-color: gray;
     margin-left: 50px;
     display: flex;
@@ -137,7 +136,19 @@ header nav {
     align-items: center;
 }
 
-footer {
+button {
+    background-color: #3882f6;
+    font-weight: bold;
+    font-size: 16px;
+    color: #E5E7EB;
+    padding: 10px 30px;
+    margin: 10px 0px 0px 0px;
+    border-radius: .4rem;
+}
+
+#call-to-action button {
+    border-style: solid;
+    border-color: #E5E7EB;
 }
 
 h1, p {
