--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ header nav {
 }
 
 #hero, footer, header {
-    background-color: #1f2937;
+    background-color: #CF6967;
     color: #f9faf8;
 }
 
@@ -96,7 +96,7 @@ header nav {
     width: 150px;
     height: 150px;
     border-style: solid;
-    border-color: #3882f6;
+    border-color: #F882f6;
     border-radius: 1rem;
 }
 
@@ -119,7 +119,7 @@ header nav {
 }
 
 #c-t-a-box {
-    background-color: #3882f6;
+    background-color: #F882f6;
     color: #f9faf8;
     padding: 20px 40px;
     display: flex;
@@ -137,7 +137,7 @@ header nav {
 }
 
 button {
-    background-color: #3882f6;
+    background-color: #F882f6;
     font-weight: bold;
     font-size: 16px;
     color: #E5E7EB;
